# verified-bot

./: .gitignore  Cargo.toml  LICENSE  README.md  SPEC.md
ut-verification-server/: Cargo.toml  README.md
ut-verification-server/src/: deterministic_aes.rs  directory.rs  email.hbs  lib.rs  mail_sender.rs  main.rs
ut-verification-token/: Cargo.toml
ut-verification-token/src/: lib.rs
utdir-ldap-processor/: Cargo.toml
utdir-ldap-processor/src/: main.rs
utv-bot/: Cargo.toml  README.md
utv-bot/src/: db.rs  handlers.rs  main.rs
verifiedbot.com/: .env.sample  .gitignore  next.config.js  package-lock.json  package.json
verifiedbot.com/components/: ClaimsData.tsx
verifiedbot.com/lib/: config.ts  csrf.ts  db.ts  discord.ts  token.ts
verifiedbot.com/pages/: _app.tsx  app.tsx  index.tsx  verify.tsx
verifiedbot.com/pages/api/: createToken.tsx  logout.tsx  request-token.tsx  token-request.tsx  verify.tsx
verifiedbot.com/pages/api/auth/: discord.tsx
verifiedbot.com/pages/guild/[guild_id]/: index.tsx
verifiedbot.com/styles/: globals.css
