[package]
name = "utv_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ldap3 = "0.9"
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"] }
reqwest = {version="0.11.8", features=["blocking"]}

serde_json = "1.0.59"

rand = "0.8.4"
ring = "0.16.20"
aes-gcm = "0.9.4"

utv_token = {path = "../ut-verification-token"}

base64 = "0.13.0"

anyhow = "1.0.52"