[package]
name = "utv_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ldap3 = "0.9"
serde = {version = "1.0", features = ["derive"] }
reqwest = {version="0.11.8", features=["blocking"]}
serde_json = "1.0.59"
rand = "0.8.4"
ring = "0.16.20"
utv_token = {path = "../ut-verification-token"}
base64 = "0.13.0"
handlebars = "4.2.0"
lettre = "0.9.6"
lettre_email = "0.9.4"
aes-gcm-siv = "0.10.3"
jsonwebtoken = "7.2.0"
