[package]
name = "utv_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ldap3 = "0.9"
serde_json = "1.0.59"
serde = {version="1.0.134", features = ["derive"]}
rand = "0.8.4"
ring = "0.16.20"
utv_token = {path = "../ut-verification-token"}
base64 = "0.13.0"
handlebars = "4.2.0"
lettre = "0.9.6"
lettre_email = "0.9.4"
aes-gcm-siv = { git = "https://github.com/Verified-Bot/AEADs" } 
jsonwebtoken = "7.2.0"
cgi = "0.6.0"
lazy_static = "1.4.0"
aws-sdk-sqs = "0.5.2"
tokio = { version = "1.15.0", features = ["full"] }
aws-config = "0.5.2"
