[package]
name = "utv-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.4.0"
aws-sdk-dynamodb = "0.4.0"
tokio = { version = "1.0", features = ["full"] }
serenity = { version="0.10", default-features = false, features = [ "builder", "client", "gateway", "rustls_backend", "http", "utils", "model", "unstable_discord_api"] }
reqwest = { version = "0.11", features = ["json"] }
jsonwebtoken = "7"
sled = "0.34.7"
utv_token = { path = "../ut-verification-token" }
lazy_static = "1.4.0"
base64 = "0.13.0"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
